<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="ifRoom">
        
        <menu>
            <item
                android:id="@+id/action_clear_completed"
                android:title="@string/clear_completed" />
            
            <item
                android:id="@+id/action_export_downloads"
                android:title="@string/export_downloads" />
            
            <item
                android:id="@+id/action_import_downloads"
                android:title="@string/import_downloads" />
            
            <item
                android:id="@+id/action_pause_all"
                android:title="@string/pause_all" />
            
            <item
                android:id="@+id/action_resume_all"
                android:title="@string/resume_all" />
        </menu>
    </item>
    
</menu> 